adding comment and adjust notebook

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 1,
       "id": "52752c65",
       "metadata": {
         "id": "52752c65"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 2,
       "id": "f95c6c58",
       "metadata": {
         "colab": {
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 3,
       "id": "25a30f6b",
       "metadata": {
         "id": "25a30f6b"
@@ -581,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 4,
       "id": "434d9756",
       "metadata": {
         "id": "434d9756"
@@ -595,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 5,
       "id": "7a541710",
       "metadata": {
         "colab": {
@@ -702,7 +702,7 @@
               "4  December 29, 2017          0  "
             ]
           },
-          "execution_count": 142,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -713,7 +713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 6,
       "id": "64d6ecc0",
       "metadata": {
         "colab": {
@@ -820,7 +820,7 @@
               "4  December 25, 2017         1  "
             ]
           },
-          "execution_count": 143,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -831,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 7,
       "id": "87bad830",
       "metadata": {
         "id": "87bad830"
@@ -844,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 8,
       "id": "1c412778",
       "metadata": {
         "colab": {
@@ -1020,7 +1020,7 @@
               "[44898 rows x 5 columns]"
             ]
           },
-          "execution_count": 145,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 9,
       "id": "f1576ac5",
       "metadata": {
         "id": "f1576ac5"
@@ -1136,7 +1136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 10,
       "id": "2464db53",
       "metadata": {
         "colab": {
@@ -1275,7 +1275,7 @@
               "[44898 rows x 3 columns]"
             ]
           },
-          "execution_count": 149,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2213,7 +2213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 11,
       "id": "aed500ba",
       "metadata": {
         "colab": {
@@ -2228,10 +2228,10 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to\n",
-            "[nltk_data]     C:\\Users\\harry\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]     C:\\Users\\trung\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to\n",
-            "[nltk_data]     C:\\Users\\harry\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]     C:\\Users\\trung\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]   Package wordnet is already up-to-date!\n"
           ]
         }
@@ -2252,7 +2252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 12,
       "id": "68b259db",
       "metadata": {
         "id": "68b259db"
@@ -2264,7 +2264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 13,
       "id": "d8c316ea",
       "metadata": {
         "colab": {
@@ -2301,7 +2301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 14,
       "id": "93c9fdcf",
       "metadata": {
         "id": "93c9fdcf"
@@ -2973,12 +2973,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "b50262fb",
+      "metadata": {},
+      "source": [
+        "# Testing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "51226a91",
+      "metadata": {},
+      "source": [
+        "In this step, we will use our best save model and then text it with real and fake news to see the model's performance with unseen data."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": 15,
       "id": "741f8edd",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\trung\\anaconda3\\envs\\nlp_env\\Lib\\site-packages\\sklearn\\base.py:442: InconsistentVersionWarning: Trying to unpickle estimator TfidfTransformer from version 1.6.1 when using version 1.7.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "c:\\Users\\trung\\anaconda3\\envs\\nlp_env\\Lib\\site-packages\\sklearn\\base.py:442: InconsistentVersionWarning: Trying to unpickle estimator TfidfVectorizer from version 1.6.1 when using version 1.7.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "c:\\Users\\trung\\anaconda3\\envs\\nlp_env\\Lib\\site-packages\\sklearn\\base.py:442: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.6.1 when using version 1.7.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n",
+            "c:\\Users\\trung\\anaconda3\\envs\\nlp_env\\Lib\\site-packages\\sklearn\\base.py:442: InconsistentVersionWarning: Trying to unpickle estimator Pipeline from version 1.6.1 when using version 1.7.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
+        "import joblib\n",
         "loaded_lr_model = joblib.load(\"best_logreg_model.pkl\")"
       ]
     },
@@ -2992,7 +3028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 185,
+      "execution_count": 16,
       "id": "6f98d46e",
       "metadata": {},
       "outputs": [],
@@ -3084,7 +3120,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 186,
+      "execution_count": 17,
+      "id": "1c7cf7d9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clean_real = clean_text(real_article)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "id": "544d4949",
       "metadata": {},
       "outputs": [
@@ -3097,7 +3143,7 @@
         }
       ],
       "source": [
-        "pred_real = loaded_lr_model.predict([real_article])\n",
+        "pred_real = loaded_lr_model.predict([clean_real])\n",
         "print(pred_real)"
       ]
     },
@@ -3111,7 +3157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 187,
+      "execution_count": 19,
       "id": "13caa005",
       "metadata": {},
       "outputs": [],
@@ -3213,7 +3259,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 188,
+      "execution_count": 20,
+      "id": "e099dee9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clean_fake = clean_text(fake_article)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
       "id": "529f2c45",
       "metadata": {},
       "outputs": [
@@ -3226,7 +3282,7 @@
         }
       ],
       "source": [
-        "pred_fake = loaded_lr_model.predict([fake_article])\n",
+        "pred_fake = loaded_lr_model.predict([clean_fake])\n",
         "print(pred_fake)"
       ]
     }
@@ -3236,7 +3292,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "nlp_env",
       "language": "python",
       "name": "python3"
     },
@@ -3250,7 +3306,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.2"
+      "version": "3.11.13"
     }
   },
   "nbformat": 4,
