--- a/model_svm.ipynb
+++ b/model_svm.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "id": "52752c65",
       "metadata": {
         "id": "52752c65"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "id": "f95c6c58",
       "metadata": {
         "colab": {
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "id": "25a30f6b",
       "metadata": {
         "id": "25a30f6b"
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "id": "5b6844d3",
       "metadata": {
         "colab": {
@@ -168,7 +168,7 @@
               "4  December 25, 2017  "
             ]
           },
-          "execution_count": 12,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "id": "b1c4d077",
       "metadata": {
         "colab": {
@@ -280,7 +280,7 @@
               "23480  January 12, 2016  "
             ]
           },
-          "execution_count": 13,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -581,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "id": "434d9756",
       "metadata": {
         "id": "434d9756"
@@ -595,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "id": "7a541710",
       "metadata": {
         "colab": {
@@ -702,7 +702,7 @@
               "4  December 29, 2017          0  "
             ]
           },
-          "execution_count": 19,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -831,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 8,
       "id": "87bad830",
       "metadata": {
         "id": "87bad830"
@@ -844,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 9,
       "id": "1c412778",
       "metadata": {
         "colab": {
@@ -1020,7 +1020,7 @@
               "[44898 rows x 5 columns]"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 10,
       "id": "f1576ac5",
       "metadata": {
         "id": "f1576ac5"
@@ -1136,7 +1136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 11,
       "id": "2464db53",
       "metadata": {
         "colab": {
@@ -1275,7 +1275,7 @@
               "[44898 rows x 3 columns]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1349,7 +1349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 12,
       "id": "ee58dfa6",
       "metadata": {
         "colab": {
@@ -2122,7 +2122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 13,
       "id": "53ea98d9",
       "metadata": {
         "colab": {
@@ -2136,7 +2136,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\trung\\AppData\\Local\\Temp\\ipykernel_11032\\3951194466.py:1: SettingWithCopyWarning: \n",
+            "C:\\Users\\trung\\AppData\\Local\\Temp\\ipykernel_33856\\3951194466.py:1: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2213,7 +2213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 14,
       "id": "aed500ba",
       "metadata": {
         "colab": {
@@ -2252,7 +2252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 15,
       "id": "68b259db",
       "metadata": {
         "id": "68b259db"
@@ -2264,7 +2264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 16,
       "id": "d8c316ea",
       "metadata": {
         "colab": {
@@ -2301,7 +2301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 17,
       "id": "93c9fdcf",
       "metadata": {
         "id": "93c9fdcf"
@@ -2919,12 +2919,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "8017eb38",
+      "metadata": {},
+      "source": [
+        "# Testing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c072dd70",
+      "metadata": {},
+      "source": [
+        "In this step, we will use our best save model and then text it with real and fake news to see the model's performance with unseen data."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 18,
       "id": "bef7763d",
       "metadata": {},
       "outputs": [],
       "source": [
+        "import joblib\n",
         "loaded_model = joblib.load(\"best_svm_model.pkl\")"
       ]
     },
@@ -2938,7 +2955,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 19,
       "id": "6f98d46e",
       "metadata": {},
       "outputs": [],
@@ -3030,7 +3047,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 20,
+      "id": "88864fc7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clean_real = clean_text(real_article)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
       "id": "544d4949",
       "metadata": {},
       "outputs": [
@@ -3043,7 +3070,7 @@
         }
       ],
       "source": [
-        "pred_real = loaded_model.predict([real_article])\n",
+        "pred_real = loaded_model.predict([clean_real])\n",
         "print(pred_real)"
       ]
     },
@@ -3057,7 +3084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "13caa005",
       "metadata": {},
       "outputs": [],
@@ -3159,7 +3186,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 23,
+      "id": "a388b11c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clean_fake = clean_text(fake_article)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
       "id": "529f2c45",
       "metadata": {},
       "outputs": [
@@ -3172,7 +3209,7 @@
         }
       ],
       "source": [
-        "pred_fake = loaded_model.predict([fake_article])\n",
+        "pred_fake = loaded_model.predict([clean_fake])\n",
         "print(pred_fake)"
       ]
     }
