push more comment and markdown for notebook training

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -2251,6 +2251,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "a96554b6",
+      "metadata": {},
+      "source": [
+        "**Lemmatizer**\n",
+        "\n",
+        "The WordNetLemmatizer from NLTK is used to reduce words to their base or dictionary form (called a lemma).Lemmatization considers the word’s meaning and part of speech to produce a valid word.\n",
+        "\n",
+        "For example:\n",
+        "* \"was/were\" to \"be\"\n",
+        "\n",
+        "* \"running\" to \"run\"\n",
+        "\n",
+        "* \"better\" to \"good\"\n",
+        "\n",
+        "This helps group similar words together, improving the consistency of text data before training machine learning models."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 12,
       "id": "68b259db",
@@ -2263,8 +2282,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "ecdb1dc2",
+      "metadata": {},
+      "source": [
+        "Here, we try to use the stopword list from both spaCy and NLTK since both of them have different words in their database, hence combining them at the end to become a new Stopword list that is better."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "d8c316ea",
       "metadata": {
         "colab": {
@@ -2285,23 +2312,36 @@
         }
       ],
       "source": [
-        "#stop word of spacy\n",
+        "# stop word of spacy\n",
         "list1 = nlp.Defaults.stop_words\n",
         "print(len(list1))\n",
         "\n",
-        "#stoopword of NTLK\n",
+        "# stopword of NTLK\n",
         "list2 = stopwords.words('english')\n",
         "print(len(list2))\n",
         "\n",
-        "#combining the stopword list\n",
-        "\n",
+        "# combining the stopword list\n",
         "Stopword = set((set(list1)|set(list2)))\n",
         "print(len(Stopword))"
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "f349a135",
+      "metadata": {},
+      "source": [
+        "Next, we use the *clean_text* function to clean and prepare text data before it is used for analysis or prediction. It first converts all text to lowercase to keep words consistent, then expands contractions like \"I’m\" to \"I am\" and \"can’t\" to “cannot\".\n",
+        "\n",
+        "After that, it removes special characters, punctuation, and extra spaces that don’t add meaning. The function also filters out stopwords, using Stopword list we created earlier, such as \"the\", \"and\", and \"is\", which are common but not useful for understanding the main idea of the text.\n",
+        "\n",
+        "Finally, it applies lemmatization using the WordNetLemmatizer to reduce words to their base form, for example, turning \"running\" into \"run\".\n",
+        "\n",
+        "The technique below were cited from [Youtube video's link](https://www.youtube.com/watch?v=YCZTGdUTDD8)."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "93c9fdcf",
       "metadata": {
         "id": "93c9fdcf"
@@ -2309,17 +2349,12 @@
       "outputs": [],
       "source": [
         "def clean_text(text):\n",
-        "\n",
-        "    \"\"\"\n",
-        "    It takes text as an input and clean it by applying several methods\n",
-        "\n",
-        "    \"\"\"\n",
-        "\n",
         "    string = \"\"\n",
         "\n",
-        "    #lower casing\n",
+        "    # lower case\n",
         "    text=text.lower()\n",
-        "    #simplifying text\n",
+        "    \n",
+        "    # expand contradiction\n",
         "    text=re.sub(r\"i'm\",\"i am\",text)\n",
         "    text=re.sub(r\"he's\",\"he is\",text)\n",
         "    text=re.sub(r\"she's\",\"she is\",text)\n",
@@ -2333,7 +2368,7 @@
         "    text=re.sub(r\"won't\",\"will not\",text)\n",
         "    text=re.sub(r\"can't\",\"cannot\",text)\n",
         "\n",
-        "    #removing any special character\n",
+        "    # remove any special character\n",
         "    text=re.sub(r\"[-()\\\"#!@$%^&*{}?.,:]\",\" \",text)\n",
         "    text=re.sub(r\"\\s+\",\" \",text)\n",
         "    text=re.sub('[^A-Za-z0-9]+',' ', text)\n",
@@ -2347,7 +2382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": null,
       "id": "577656b3",
       "metadata": {
         "colab": {
@@ -2377,7 +2412,7 @@
         }
       ],
       "source": [
-        "#cleaning the whole data\n",
+        "# clean title and text\n",
         "df[\"title\"] = df[\"title\"].apply(clean_text)\n",
         "df[\"text\"]=df[\"text\"].apply(clean_text)"
       ]
