--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -2,6 +2,14 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "aba2605d",
+      "metadata": {},
+      "source": [
+        "The code is push on GitHub repo. Press [this link](https://github.com/trunghuu2404-debug/Fake-New-Detection.git) to see the full project."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "0f431bec",
       "metadata": {
         "id": "0f431bec"
@@ -2202,7 +2210,7 @@
         "id": "638887fd"
       },
       "source": [
-        "**STOP WORLD**\n",
+        "**STOP WORD**\n",
         "\n",
         "In Natural Language Processing (NLP), stop words are common words that are usually ignored during text processing because they carry little meaningful information.\n",
         "\n",
