--- a/model_nb.ipynb
+++ b/model_nb.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7aa53c08",
+   "metadata": {},
+   "source": [
+    "The code is push on GitHub repo. Press [this link](https://github.com/trunghuu2404-debug/Fake-New-Detection.git) to see the full project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5c4df2ea",
    "metadata": {},
    "source": [
@@ -2038,7 +2046,7 @@
    "id": "2f3a599d",
    "metadata": {},
    "source": [
-    "**STOP WORLD**\n",
+    "**STOP WORD**\n",
     "\n",
     "In Natural Language Processing (NLP), stop words are common words that are usually ignored during text processing because they carry little meaningful information.\n",
     "\n",
@@ -2573,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "88b0587a",
    "metadata": {},
    "outputs": [
@@ -2599,7 +2607,7 @@
     }
    ],
    "source": [
-    "y_score_nb = best_nb.predict_proba(X_test)[:, 1]  # SVM decision function\n",
+    "y_score_nb = best_nb.predict_proba(X_test)[:, 1] \n",
     "fpr_nb, tpr_nb, thresholds_nb = roc_curve(y_test, y_score_nb)\n",
     "roc_auc_nb = auc(fpr_nb, tpr_nb)\n",
     "\n",
